[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lute3"
version = "3.0.1"
description = "Learning Using Texts"
readme = "README_PyPi.md"
requires-python = ">=3.8,<4"
authors = [
  {name = "Jeff Zohrab", email = "jzohrab@gmail.com"}
]

dependencies = [
  "Flask-SQLAlchemy>=3.1.1,<4",
  "Flask-WTF>=1.2.1,<2",
  "natto-py>=1.0.1,<2",
  "jaconv>=0.3.4,<1",
  "platformdirs>=3.10.0,<4",
  "requests>=2.31.0,<3",
  "beautifulsoup4>=4.12.2,<5",
  "PyYAML>=6.0.1,<7",
  "toml>=0.10.2,<1",
  "waitress>=2.1.2,<3",
  "openepub>=0.0.8,<1",
  "pyparsing>=3.1.4",
  "pypdf>=3.17.4",
  "subtitle-parser>=1.3.0",
  "ahocorapy>=1.6.2"
]

[project.scripts]
lute = "lute.main:start"

[project.urls]
Home = "https://github.com/luteorg/lute-v3"

[tool.poetry]

packages = [{include = "lute"}]
