[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "lute_mandarin_parser"

[project]
name = "lute3-mandarin"
dynamic = ['version']
description = "Learning Using Texts - Chinese Parser"
requires-python = ">=3.8"
authors = [
  {name = "Chris Ghyzel"}
]
dependencies = [
  "lute3>=3.4.0",
  "jieba>=0.42.1",
  "pypinyin>=0.51.0"
]


[project.entry-points."lute.plugin.parse"]
lute_mandarin = "lute_mandarin_parser.parser:MandarinParser"
